fix: mangamenu impossible to close on mobile

--- a/src/pages/manga/styles.scss
+++ b/src/pages/manga/styles.scss
@@ -97,3 +97,7 @@
   position: sticky;
   top: calc(var(--header-height) + 17px);
 }
+
+.vlist * {
+  pointer-events: inherit !important;
+}
